minor improvements for edgegrob drawing and gridTreeTooltip sensitivity
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/changes.txt
+++ b/pkg/inst/doc/changes.txt
@@ -5,3 +5,11 @@ Changes from 0.2 to 0.3
 1.  Renamed addTooltips() to gridTreeTips().
 
 2.  Added grobBrowser() function.
+
+3.  Made edgeGrob drawing a little more robust
+    (defaults for 'lwd' and 'lty')
+
+4.  Improved gridTreeTips() tooltips 
+    (so that get tooltip whene mouseover ANYWHERE on node).
+
+
