--- a/pkg/inst/doc/changes.txt
+++ b/pkg/inst/doc/changes.txt
@@ -1,4 +1,14 @@
 
+Changes from 0.3 to 0.4-0
+=======================
+
+1.  Moved grid.DLapply() to 'grid'.
+
+2.  Moved grid.bezier() to 'grid'.
+
+3.  Split 'Rgraphviz' graph drawing out into new package 'rgidGraphviz'.
+
+
 Changes from 0.2 to 0.3
 =======================
 
