fix so that ignore popViewport() in the display list
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@7 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/changes.txt
+++ b/pkg/inst/doc/changes.txt
@@ -8,6 +8,10 @@ Changes from 0.3 to 0.4-0
 
 3.  Split 'Rgraphviz' graph drawing out into new package 'rgidGraphviz'.
 
+4.  Fixed bug so that popViewport()s in display list are also ignored
+    when drawing graph (just like upViewport()s and downViewport()s).
+
+
 
 Changes from 0.2 to 0.3
 =======================
