added grobs and viewports arguments to gridTree
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/changes.txt
+++ b/pkg/inst/doc/changes.txt
@@ -1,4 +1,10 @@
 
+Changes from 0.4-0 to 0.4-1
+=======================
+
+1.  Added 'grobs' and 'viewports' arguments to gridTree().
+
+
 Changes from 0.3 to 0.4-0
 =======================
 
